--- a/PurchasesSaleBinance/MainWindow.xaml
+++ b/PurchasesSaleBinance/MainWindow.xaml
@@ -6,12 +6,12 @@
         xmlns:local="clr-namespace:PurchasesSaleBinance"
         mc:Ignorable="d"
         Title="MainWindow" Height="803" Width="1030" Loaded="Window_Loaded">
-    <Grid>
+    <Grid x:Name="Window">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="0*"/>
             <ColumnDefinition/>
         </Grid.ColumnDefinitions>
-        <DataGrid Margin="10,10,313,0" Grid.ColumnSpan="2" Height="571" VerticalAlignment="Top">
+        <DataGrid x:Name="Table" Margin="10,10,313,0" Grid.ColumnSpan="2" AutoGenerateColumns="False" Height="571" VerticalAlignment="Top">
             <DataGrid.Columns>
                 <DataGridTextColumn Header="Имя" Binding="{Binding symbol}"/>
                 <DataGridTextColumn  Header="Текущая стоимость" Binding="{Binding CurrentValue}"/>
@@ -27,22 +27,30 @@
         <Button x:Name="btnBuy" Content="Купить" HorizontalAlignment="Right" Margin="0,10,10,0" Width="298" Height="122" VerticalAlignment="Top" FontSize="50" FontFamily="Times New Roman" FontWeight="Bold" Background="#FF29A20A" FontStyle="Normal" Grid.Column="1"/>
         <Button x:Name="btnBuy_Copy" Content="Продать" HorizontalAlignment="Right" Margin="0,137,10,0" Width="298" Height="122" VerticalAlignment="Top" FontSize="50" FontFamily="Times New Roman" FontWeight="Bold" Background="#FFF61A1A" FontStyle="Normal" Grid.Column="1"/>
         <Label Content="API key" Margin="0,0,224,233" HorizontalAlignment="Right" Width="84" Height="32" VerticalAlignment="Bottom" RenderTransformOrigin="0.481,-0.164" Grid.Column="1"/>
-        <TextBox x:Name="tbAPIkey" HorizontalAlignment="Right" Margin="0,0,10,211" TextWrapping="Wrap" Width="298" Height="22" VerticalAlignment="Bottom" Grid.Column="1"/>
-        <Grid x:Name="groupParam" Margin="0,296,10,0" Background="#FFE4E4E4" HorizontalAlignment="Right" Width="298" Height="221" VerticalAlignment="Top" Grid.Column="1" RenderTransformOrigin="0.737,0.81">
+        <TextBox x:Name="tbAPIkey" HorizontalAlignment="Right" Margin="0,0,10,206" TextWrapping="Wrap" Width="298" Height="22" VerticalAlignment="Bottom" Grid.Column="1"/>
+        <Grid x:Name="groupParam" Margin="0,296,10,0" Background="#FFE4E4E4" HorizontalAlignment="Right" Width="298" Height="107" VerticalAlignment="Top" Grid.Column="1" RenderTransformOrigin="0.737,0.81">
             <Label Content="Фьюч" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top"/>
             <Label Content="Плечо" HorizontalAlignment="Left" Margin="159,10,0,0" VerticalAlignment="Top"/>
             <Label Content="Сумма" HorizontalAlignment="Left" Margin="10,45,0,0" VerticalAlignment="Top" Width="42"/>
             <TextBox x:Name="tbSumm" HorizontalAlignment="Left" Margin="57,45,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="92"/>
-            <Label x:Name="tbstopLos" Content="Стоп лос" HorizontalAlignment="Left" Margin="10,81,0,0" VerticalAlignment="Top" Width="56"/>
-            <TextBox x:Name="tbStopLos" HorizontalAlignment="Left" Margin="71,81,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="78"/>
-            <Label Content="Тейк профит" HorizontalAlignment="Left" Margin="10,108,0,0" VerticalAlignment="Top" Width="74" Height="22"/>
-            <TextBox x:Name="tbTakeProfit" HorizontalAlignment="Left" Margin="89,108,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="60"/>
+            <Label x:Name="tbstopLos" Content="Стоп лос" HorizontalAlignment="Left" Margin="159,45,0,0" VerticalAlignment="Top" Width="65"/>
+            <TextBox x:Name="tbStopLos" HorizontalAlignment="Left" Margin="219,45,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="69"/>
+            <Label Content="Тейк профит" HorizontalAlignment="Left" Margin="10,72,0,0" VerticalAlignment="Top" Width="88" Height="22"/>
+            <TextBox x:Name="tbTakeProfit" HorizontalAlignment="Left" Margin="98,72,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="51"/>
             <ComboBox x:Name="cbFutures" HorizontalAlignment="Left" Margin="57,10,0,0" VerticalAlignment="Top" Width="92"/>
             <ComboBox x:Name="cbShoulder" HorizontalAlignment="Left" Margin="199,10,0,0" VerticalAlignment="Top" Width="92"/>
-            <Button x:Name="btnApply" Content="Применить" HorizontalAlignment="Left" Margin="116,167,0,0" VerticalAlignment="Top"/>
+            <Button x:Name="btnApply" Content="Применить" HorizontalAlignment="Left" Margin="202,78,0,0" VerticalAlignment="Top"/>
+            <ComboBox x:Name="cbShoulder_Copy" HorizontalAlignment="Left" Margin="199,10,0,0" VerticalAlignment="Top" Width="92"/>
         </Grid>
         <Label Content="BTCUSDT" HorizontalAlignment="Right" Margin="0,254,95,0" VerticalAlignment="Top" Height="37" Width="128" FontSize="24" Grid.Column="1"/>
-        <ListBox x:Name="listJurnal" Grid.ColumnSpan="2" Margin="10,0,10,10" Height="191" VerticalAlignment="Bottom"/>
+        <ListBox x:Name="listJurnal" Grid.ColumnSpan="2" Margin="10,596,10,0" Height="181" VerticalAlignment="Top"/>
+        <Grid Grid.ColumnSpan="2" Margin="0,408,10,0" HorizontalAlignment="Right" Width="298" Height="109" VerticalAlignment="Top">
+            <ComboBox x:Name="cbPair" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Width="120"/>
+            <Button x:Name="btnAddPair" Content="Добавить" HorizontalAlignment="Left" Margin="149,10,0,0" VerticalAlignment="Top"/>
+            <ComboBox x:Name="cbDelPair" HorizontalAlignment="Left" Margin="10,37,0,0" VerticalAlignment="Top" Width="120"/>
+            <Button x:Name="btnDel" Content="Удалить" HorizontalAlignment="Left" Margin="149,37,0,0" VerticalAlignment="Top"/>
+        </Grid>
+        <Button x:Name="btnReload" Content="ПЕРЕЗАГРУЗИТЬ" Grid.ColumnSpan="2" HorizontalAlignment="Left" Margin="801,522,0,0" VerticalAlignment="Top"/>
 
     </Grid>
 </Window>
